<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen_david_blanco.Actividad1">

    <TextView
        android:id="@+id/textViewPerfilCandidato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfilCandidato"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/nombre"
        android:layout_below="@id/textViewPerfilCandidato"/>

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_below="@+id/textViewPerfilCandidato"
        android:layout_toEndOf="@id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textViewProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/provincia"
        android:layout_below="@id/textViewNombre"/>
    <Spinner
        android:id="@+id/spinnerProvicias"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewProvincia"/>

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/sexo"
        android:layout_below="@id/spinnerProvicias"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textViewSexo">
        <RadioButton
            android:id="@+id/radioMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"/>
        <RadioButton
            android:id="@+id/radioFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewConocimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/conocimientos"
        android:layout_below="@id/radioGroup"/>
    <CheckBox
        android:id="@+id/checkPHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/php"
        android:layout_below="@id/textViewConocimientos"/>
    <CheckBox
        android:id="@+id/checkJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java"
        android:layout_toEndOf="@id/checkPHP"
        android:layout_below="@id/textViewConocimientos"/>
    <CheckBox
        android:id="@+id/checkHtml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/html"
        android:layout_toEndOf="@id/checkJava"
        android:layout_below="@id/textViewConocimientos"/>
    <CheckBox
        android:id="@+id/checkCSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/css"
        android:layout_toEndOf="@id/checkHtml"
        android:layout_below="@id/textViewConocimientos"/>

    <TextView
        android:id="@+id/textViewResultadoOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/resultadoOper"
        android:layout_below="@id/checkPHP"/>
    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="120px"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"
        android:enabled="false"
        android:layout_below="@id/textViewResultadoOperacion"/>
    <TextView
        android:id="@+id/textViewOpeSuma"
        android:layout_toEndOf="@id/editTextNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opeSuma"
        android:layout_marginTop="30px"
        android:textSize="20dp"
        android:layout_below="@id/textViewResultadoOperacion"/>
    <EditText
        android:id="@+id/editTextNum2"
        android:layout_toEndOf="@id/textViewOpeSuma"
        android:layout_width="120px"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"
        android:enabled="false"
        android:layout_below="@id/textViewResultadoOperacion"/>
    <TextView
        android:id="@+id/textViewOpeIgual"
        android:layout_toEndOf="@id/editTextNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opeIgual"
        android:layout_marginTop="30px"
        android:textSize="20dp"
        android:layout_below="@id/textViewResultadoOperacion"/>
    <EditText
        android:id="@+id/editTextResultado"
        android:layout_toEndOf="@id/textViewOpeIgual"
        android:layout_width="120px"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        android:layout_below="@id/textViewResultadoOperacion"/>

    <Button
        android:id="@+id/buttonEvaluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEvaluar"
        android:layout_marginLeft="350px"
        android:onClick="evaluar"
        android:layout_below="@id/editTextResultado"/>

    <TextView
        android:id="@+id/textViewCandidatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/candidatos"
        android:layout_below="@id/buttonEvaluar"/>
    <TextView
        android:id="@+id/textViewNumCandidatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewCandidatos"
        android:layout_marginTop="30px"
        android:text="@string/numCandidatos"
        android:layout_below="@id/buttonEvaluar"/>

    <Button
        android:id="@+id/buttonSalir"
        android:visibility="invisible"
        android:layout_marginTop="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSalir"
        android:onClick="salir"
        android:layout_below="@id/textViewNumCandidatos"/>
</RelativeLayout>
