<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="200px"
    tools:context="com.example.dm2.examen_david_blanco.MainActivity">

    <Button
        android:id="@+id/ButtonActividad1"
        android:layout_width="wrap_content"
        android:onClick="pulsar"
        android:layout_height="wrap_content"
        android:text="@string/actividad1"/>
    <Button
        android:id="@+id/ButtonActividad2"
        android:layout_width="wrap_content"
        android:onClick="pulsar"
        android:layout_height="wrap_content"
        android:text="@string/actividad2"/>
    <Button
        android:id="@+id/ButtonActividad3"
        android:layout_width="wrap_content"
        android:onClick="pulsar"
        android:layout_height="wrap_content"
        android:text="@string/actividad3"/>
    <Button
        android:id="@+id/ButtonSalir"
        android:onClick="pulsar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"/>
</LinearLayout>
